[metadata]
name = info-nce-pytorch
version = 0.1.3
description = PyTorch implementation of the InfoNCE loss for self-supervised learning.
long-description = file: README.rst
author = Robin Elbers
home-page = https://github.com/RElbers/info-nce-pytorch
license = MIT
license-file = LICENSE

[options]
packages = info_nce
install_requires =
    torch